AAD-94 - add last step registration without email - Changed white "@ctemplar.com" icons on dark theme on white fields

--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -65,6 +65,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/lato_regular"
             android:hint="@string/title_ctemplar_username"
+            android:drawableRight="@drawable/ic_ctemplar_username_black"
             android:inputType="textEmailAddress"
             android:letterSpacing="0.05"
             android:textColor="@color/colorDarkBlue2"
